<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_profile"
    tools:context="com.cog.ananv.Fragment.EditprofileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:paddingTop="20sp"
           android:paddingBottom="20sp">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="5sp">

               <com.facebook.drawee.view.SimpleDraweeView
                   android:id="@+id/profile_image"
                   android:layout_width="100dp"
                   android:layout_height="120dp"
                   android:layout_gravity="center"
                   app:civ_border_color="@color/colorPrimaryDark"
                   app:civ_border_width="3dp"
                   fresco:roundAsCircle="true"
                   android:scaleType="fitXY"
                   app:placeholderImage="@drawable/profile"
                   android:layout_alignParentTop="true"
                   android:layout_alignParentStart="true"
                   android:layout_marginStart="44dp" />

               <Button
                   android:id="@+id/save"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@drawable/save_button"
                   android:text="@string/save"
                   android:textAllCaps="false"
                   android:textColor="@color/black"
                   android:layout_marginStart="84dp"
                   android:layout_alignTop="@+id/profile_image"
                   android:layout_toEndOf="@+id/profile_image"
                   android:layout_marginTop="34dp" />

           </RelativeLayout>

           <com.rengwuxian.materialedittext.MaterialEditText
               android:id="@+id/edit_firstname"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginEnd="20sp"
               android:layout_marginStart="20sp"
               android:layout_marginTop="10sp"
               android:hint="@string/firstname"
               android:textAlignment="gravity"
               android:imeOptions="actionDone"
               android:drawableRight="@drawable/edit_pencil"
               android:singleLine="true"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:textStyle="bold"
               app:met_baseColor="@color/black"
               app:met_floatingLabel="highlight"
               app:met_floatingLabelTextColor="@color/black"
               app:met_primaryColor="?colorAccent"
               app:met_textColorHint="@color/black"
               app:met_underlineColor="@color/colorPrimary"/>

           <com.rengwuxian.materialedittext.MaterialEditText
               android:id="@+id/edit_lastname"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginEnd="20sp"
               android:layout_marginStart="20sp"
               android:layout_marginTop="10sp"
               android:hint="@string/last_name"
               android:textAlignment="gravity"
               android:imeOptions="actionDone"
               android:drawableRight="@drawable/edit_pencil"
               android:singleLine="true"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:textStyle="bold"
               app:met_baseColor="@color/black"
               app:met_floatingLabel="highlight"
               app:met_floatingLabelTextColor="@color/black"
               app:met_primaryColor="?colorAccent"
               app:met_textColorHint="@color/black"
               app:met_underlineColor="@color/colorPrimary"/>
           <com.rengwuxian.materialedittext.MaterialEditText
               android:id="@+id/edit_username"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginEnd="20sp"
               android:layout_marginStart="20sp"
               android:layout_marginTop="10sp"
               android:hint="@string/user_name"
               android:textAlignment="gravity"
               android:imeOptions="actionDone"
               android:drawableRight="@drawable/edit_pencil"
               android:singleLine="true"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:textStyle="bold"
               app:met_baseColor="@color/black"
               app:met_floatingLabel="highlight"
               app:met_floatingLabelTextColor="@color/black"
               app:met_primaryColor="?colorAccent"
               app:met_textColorHint="@color/black"
               app:met_underlineColor="@color/colorPrimary"/>


           <com.rengwuxian.materialedittext.MaterialEditText
               android:id="@+id/edit_description"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginEnd="20sp"
               android:layout_marginStart="20sp"
               android:layout_marginTop="10sp"
               android:hint="@string/descriptions"
               android:textAlignment="gravity"
               android:imeOptions="actionDone"
               android:drawableRight="@drawable/edit_pencil"
               android:singleLine="true"
               android:maxLength="120"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:textStyle="bold"
               app:met_baseColor="@color/black"
               app:met_floatingLabel="highlight"
               app:met_floatingLabelTextColor="@color/black"
               app:met_primaryColor="?colorAccent"
               app:met_textColorHint="@color/black"
               app:met_underlineColor="@color/colorPrimary"/>

           <com.rengwuxian.materialedittext.MaterialEditText
               android:id="@+id/useremail"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginEnd="20sp"
               android:layout_marginStart="20sp"
               android:layout_marginTop="10sp"
               android:hint="@string/email"
               android:textAlignment="gravity"
               android:imeOptions="actionDone"
               android:inputType="textEmailAddress"
               android:singleLine="true"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:textStyle="bold"
               android:focusable="false"
               app:met_baseColor="@color/black"
               app:met_floatingLabel="highlight"
               app:met_floatingLabelTextColor="@color/black"
               app:met_primaryColor="?colorAccent"
               app:met_textColorHint="@color/black"
               app:met_underlineColor="@color/colorPrimary" />
           <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
               android:id="@+id/hidepassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginEnd="20sp"
               android:layout_marginStart="20sp"
               android:layout_marginTop="10sp"
               android:hint="@string/password"
               android:textAlignment="inherit"
               android:imeOptions="actionDone"
               android:inputType="textPassword"
               android:singleLine="true"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:textStyle="bold"
               android:focusable="true"
               app:met_baseColor="@color/black"
               app:met_floatingLabel="highlight"
               android:layout_alignParentStart="true"
               android:layout_alignParentEnd="true"
               app:met_floatingLabelTextColor="@color/black"
               app:met_primaryColor="?colorAccent"
               app:met_textColorHint="@color/black"
               app:met_underlineColor="@color/colorPrimary"
               />

           <com.rengwuxian.materialedittext.MaterialEditText
               android:id="@+id/userpassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/password"
               android:imeOptions="actionNext"
               android:inputType="textPassword"
               android:layout_marginEnd="20sp"
               android:layout_marginStart="20sp"
               android:layout_marginTop="10sp"
               android:drawableRight="@drawable/edit_pencil"
               android:textStyle="bold"
               android:visibility="gone"
               android:textSize="16sp"
               android:maxLines="1"
               android:textColor="@color/black"
               app:met_baseColor="@color/black"
               app:met_floatingLabel="highlight"
               app:met_floatingLabelTextColor="@color/black"
               app:met_primaryColor="?colorAccent"
               app:met_textColorHint="@color/black"
               app:met_underlineColor="@color/colorPrimary" />
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="5dp">


               <Button
                   android:id="@+id/support"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginEnd="40sp"
                   android:layout_marginStart="40sp"
                   android:layout_marginTop="10sp"
                   android:background="@drawable/bgsignup"
                   android:text="@string/support"
                   android:textAllCaps="false"
                   android:textColor="@color/cardview_light_background"
                   />


               <Button
                   android:id="@+id/logout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginEnd="40sp"
                   android:layout_marginStart="40sp"
                   android:layout_below="@+id/support"
                   android:layout_marginTop="10sp"
                   android:layout_marginBottom="10sp"
                   android:background="@drawable/button_bg"
                   android:text="@string/log_out"
                   android:textAllCaps="false"
                   android:textColor="@color/cardview_light_background" />
           </RelativeLayout>

       </LinearLayout>

    </ScrollView>

</LinearLayout>
