<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tool"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cog.ananv.Fragment.SignupFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/result_image"
                    android:layout_width="180sp"
                    android:layout_height="180dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    app:placeholderImage="@drawable/profile"
                    fresco:actualImageScaleType="focusCrop"
                    fresco:roundAsCircle="true"
                    fresco:roundingBorderColor="@color/colorAccent"
                    fresco:roundingBorderWidth="3dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/result_image"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:gravity="center"
                        android:text="@string/add_profile_photo"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20sp"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:gravity="center"
                        android:paddingEnd="20sp"
                        android:paddingStart="20sp"
                        android:text="@string/subtext"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/pick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="100sp"
                        android:layout_marginStart="100sp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button_bg"
                        android:gravity="center"
                        android:text="@string/add_photo"
                        android:textColor="@color/White" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@drawable/save_button"
                        android:textColor="@color/black"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:visibility="gone" />

                </LinearLayout>
            </RelativeLayout>

        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next"
            android:background="@color/colorAccent"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentEnd="true"
            android:elevation="20dp"/>

    </RelativeLayout>
</RelativeLayout>
