<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.cog.ananv.Fragment.FogettenPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:elevation="10dp"
                android:padding="2dp"
                android:src="@drawable/right_arrow" />

        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="10dp"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtAnan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/txtWords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAnan"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/reset_your_password"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:id="@+id/ic_split"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtWords"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp">


                    <TextView
                        android:id="@+id/or_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/forgot_password"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="11dp"
                        android:layout_toLeftOf="@+id/or_text"
                        android:layout_toStartOf="@+id/or_text"
                        android:background="@color/colorPrimary" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="11dp"
                        android:layout_toEndOf="@+id/or_text"
                        android:layout_toRightOf="@+id/or_text"
                        android:background="@color/colorPrimary" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ic_split"
                    android:layout_marginEnd="20sp"
                    android:layout_marginStart="20sp"
                    android:background="@drawable/forgot"
                    android:paddingStart="10sp">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ic_split"
                        android:hint="@string/email"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:met_baseColor="@color/black"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelTextColor="@color/black"
                        app:met_primaryColor="?colorAccent"
                        app:met_textColorHint="@color/black"
                        app:met_underlineColor="@color/colorPrimary" />
                </RelativeLayout>

                <Button
                    android:id="@+id/resetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_below="@+id/forgot"
                    android:layout_marginBottom="10sp"
                    android:layout_marginEnd="40sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="40sp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/camera_bg"
                    android:text="@string/reset_password"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />

            </RelativeLayout>


        </ScrollView>
    </RelativeLayout>

</FrameLayout>
